添加微信登录

--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -47,7 +47,7 @@
                             </div>
                             <button class="ui fluid large teal submit button">登   录</button>
 
-                            <a href="wx_login" style="float: right">其他方式</a>
+                            <a th:href="@{/wx_login}" href="wx_login" style="float: right">其他方式</a>
                             <br/>
                         </div>
                         <div class="ui error mini message"></div>
